2003-02-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/score/arm.h: Set up ARM_HAS_FPU based on -D__SOFTFP__.

2002-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require autoconf-2.57 + automake-1.7.2.
	* Makefile.am: Eliminate C_O_FILES, S_O_FILES, libscorecpu_a_OBJECTS.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Fix package name.

2002-11-04	Joel Sherrill <joel@OARcorp.com>

	* cpu.c: Removed warning.

2002-11-01	Joel Sherrill <joel@OARcorp.com>

	* cpu.c: Removed warnings.

2002-10-31	Joel Sherrill <joel@OARcorp.com>

	* rtems/score/cpu.h: Removed warning.

2002-10-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add nostdinc to AM_INIT_AUTOMAKE.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-10-04	Jay Monkman <jtm@smoothsmoothie.com>

	* rtems/score/cpu.h: Fix u16 and u32 swap routines.

2002-08-05	Joel Sherrill <joel@OARcorp.com>

	* rtems/score/cpu.h, rtems/score/types.h: Updated to fix some typos.

2002-07-30	Jay Monkman <jtm@smoothsmoothie.com>

	* cpu.c, cpu_asm.S, rtems/score/arm.h, rtems/score/cpu.h,
	rtems/score/cpu_asm.h, rtems/score/types.h: ARM port works
	well enough to run all sptests, tmtests, and ttcp.  
	In addition to general cleanup, there has been considerable
	optimization to interrupt disable/enable, endian swapping,
	and context switching.

2002-07-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Build libscorecpu.a instead of rtems-cpu.rel.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use .$(OBJEXT) instead of .o.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use . instead of .o.

2002-07-17	Jay Monkman <jtm@smoothsmoothie.com>

	* rtems/score/cpu_asm.h: Enhanced to include register offsets.
	* Makefile.am: Install rtems/score/cpu_asm.h.
	* cpu.c: Significantly enhanced including the implementation of
	_CPU_ISR_Get_level.